# bancos

./: 404.html  LICENSE  LICENSE.txt  README.md  bcra.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml  publish-to-pypi.yml
docs/: index.md  reference.md
reference/: index.html
src/bancos/: bcra.py
tests/: test_bcra.py
