[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bancos"
dynamic = ["version"]
description = 'An SDK to interact with argentine banks'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Fernando Gasperi", email = "fgasperijabalera@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/fgasperij/bancos#readme"
Issues = "https://github.com/fgasperij/bancos/issues"
Source = "https://github.com/fgasperij/bancos"

[tool.hatch.version]
path = "src/bancos/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bancos tests}"

[tool.coverage.run]
source_pkgs = ["bancos", "tests"]
branch = true
parallel = true
omit = [
  "src/bancos/__about__.py",
]

[tool.coverage.paths]
bancos = ["src/bancos", "*/bancos/src/bancos"]
tests = ["tests", "*/bancos/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
